<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, SocProxActivity!</string>
    <string name="app_name">Social Proximity</string>
    <string name="service_name">Proximity Service</string>
    <string name="loading">Loading &#8230;</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="refresh">Refresh</string>
    <string name="challenge_success">I Succeeded</string>
    <string name="challenge_fail">I Failed</string>
    <string name="challenge_dialog">A New Challenge!</string>
    <string name="challenge_info">Challenge Info:</string>
    <string name="loading_challenge">Loading Challenge</string>
    <string name="logo">Logo</string>
    <string name="name">Name:</string>
    <string name="description">Description:</string>
    <string name="challenger">Challenger:</string>
    
    <string name="fblogin">Login with Facebook</string>
    <string name="twitterlogin">Login with Twitter</string>
    <string name="fbconnect">Connect with Facebook</string>
    <string name="twitterconnect">Connect with Twitter</string>
    <string name="sync_prompt">Would you like to sync your socprox username with these services?</string>
    <string name="register_alias">Register an alias (Facebook, Twitter)</string>
    <string name="skip">Skip</string>
    <string name="cont">Continue</string>
    <string name="login">Login with SocProx</string>
    <string name="logout">Logout</string>
    <string name="signup">Signup</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="create_account">Create Account</string>
	<string name="email">Email address:</string>
	<string name="username">Username: (REQUIRED)</string>
    <string name="firstname">First name:</string>
	<string name="lastname">Last name:</string>
	<string name="password1">Password:</string>
	<string name="password2">Confirm Password:</string>
	<string name="hint_firstname">Enter first name:</string>
	<string name="hint_lastname">Enter last name:</string>
	<string name="hint_email">Enter email address:</string>
	<string name="hint_username">Enter username:</string>
	<string name="hint_password1">Enter password:</string>
	<string name="hint_password2">Reenter password:</string>
    
	<!-- strings for gcm -->
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="challenge_cancel">Cancel</string>
</resources>