<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#006699"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="186dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username"
        android:singleLine="true"/>
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/password1"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_password1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password1"
        android:singleLine="true"
        android:inputType="textPassword" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/password2"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_password2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password2"
        android:singleLine="true"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:onClick="onSignupButtonClicked"
        android:text="@string/signup" />

</LinearLayout>