<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <TextView
        android:layout_width="301dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/firstname"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_firstname"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/hint_firstname"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/lastname"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_lastname"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/hint_lastname"
        android:singleLine="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/email"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:singleLine="true" />

    <ImageView
        android:id="@+id/facebook_connect_image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:contentDescription="@string/fbconnect"
        android:onClick="onFBConnectButtonClicked"
        android:src="@drawable/facebook_connect" />

    <ImageView
        android:id="@+id/twitter_connect_image"
        android:layout_width="184dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.99"
        android:contentDescription="@string/twitterconnect"
        android:onClick="onTwitterConnectButtonClicked"
        android:src="@drawable/twitter_connect" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onSaveButtonClicked"
        android:text="@string/save" />

    <Button
        android:id="@+id/btn_close"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onCloseButtonClicked"
        android:text="@string/close" />

</LinearLayout>