<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_challenge_dialog"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_weight="0.01"
        android:gravity="center"
        android:lines="3"
        android:text="@string/challenge_dialog"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:typeface="serif" />
    
	<!-- START SEPARATOR -->
	<View 
		android:layout_width="fill_parent"
		android:layout_height="2dp"
		android:background="#006699"/>
	<!-- END SEPARATOR -->
	
	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/black"
	    android:text="@string/challenge_info"
	    android:textSize="18dp" />
	
	<!-- START SEPARATOR -->
	<View 
		android:layout_width="fill_parent"
		android:layout_height="2dp"
		android:background="#006699"/>
	<!-- END SEPARATOR -->
	
	<ScrollView
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:background="@color/black" >
	    
	    <LinearLayout
	        android:orientation="vertical"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	        
	        <TextView
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/name" />

	        <TextView 
	            android:id="@+id/tv_challenge_acc_name"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:text="@string/loading"/>
	        
	        <!-- START SEPARATOR -->
	        <View 
	            android:layout_width="fill_parent"
	            android:layout_height="2dp"
	            android:background="#006699"/>
	        <!-- END SEPARATOR -->
	        
	        <TextView
	            android:text="@string/description"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"/>
	        <TextView 
	            android:id="@+id/tv_challenge_acc_description"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:text="@string/loading"/>
	        
	        <!-- START SEPARATOR -->
	        <View 
	            android:layout_width="fill_parent"
	            android:layout_height="2dp"
	            android:background="#006699"/>
	        <!-- END SEPARATOR -->
	        
	        <TextView
	            android:text="@string/challenger"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"/>
	        <TextView 
	            android:id="@+id/tv_challenge_acc_challenger"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:text="@string/loading"/>
	        
	    </LinearLayout>
	    
	</ScrollView>
	<!--  -->
	<!--  -->
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <Button 
            android:id="@+id/btn_challenge_accepted"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/accept"
            android:onClick="onChallengeAcceptButtonClicked" />

        <Button
            android:id="@+id/btn_challenge_denied"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="onChallengeDenyButtonClicked"
            android:text="@string/deny" />
        
    </LinearLayout>

</LinearLayout>